@@ -267,6 +267,7 @@ enum ECTagNames {
 			EC_TAG_USER_NICK                          = 0x1201,
 			EC_TAG_USER_HASH                          = 0x1202,
 			EC_TAG_USER_HOST                          = 0x1203,
+			EC_TAG_GENERAL_CHECK_NEW_VERSION          = 0x1204,
 		EC_TAG_PREFS_CONNECTIONS                  = 0x1300,
 			EC_TAG_CONN_DL_CAP                        = 0x1301,
 			EC_TAG_CONN_UL_CAP	                  = 0x1302,
@@ -663,6 +664,7 @@ wxString GetDebugNameECTagNames(uint16 arg)
 		case 0x1201: return wxT("EC_TAG_USER_NICK");
 		case 0x1202: return wxT("EC_TAG_USER_HASH");
 		case 0x1203: return wxT("EC_TAG_USER_HOST");
+		case 0x1204: return wxT("EC_TAG_GENERAL_CHECK_NEW_VERSION");
 		case 0x1300: return wxT("EC_TAG_PREFS_CONNECTIONS");
 		case 0x1301: return wxT("EC_TAG_CONN_DL_CAP");
 		case 0x1302: return wxT("EC_TAG_CONN_UL_CAP");
